--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,8 @@
 body{
   margin: 0;
   text-align: center;
-  font-family: sans-serif;
+  background-color: whitesmoke;
+  font-family: Arial, Helvetica, sans-serif;
 }
 h1{
   margin: 0 auto 0 auto;
